# synapse

./: .gitignore  CLAUDE.md  Cargo.toml  Justfile  README.md  docker-compose.yml
.beads/: issues.jsonl
examples/: user.proto
examples/full-stack/: Cargo.toml  build.rs  docker-compose.yml  init.sql
examples/full-stack/proto/: blog.entities.proto  blog.proto  blog.synapse.proto
examples/full-stack/src/: lib.rs  main.rs
examples/gateway/: Cargo.toml  README.md
examples/gateway/src/: main.rs
examples/iam/: Cargo.toml  build.rs
examples/iam/proto/: iam.entities.proto  iam.proto  iam.synapse.proto
examples/iam/src/: lib.rs  main.rs
examples/unified/: Cargo.toml  build.rs
examples/unified/proto/blog/: entities.proto  services.proto
examples/unified/proto/iam/: entities.proto  services.proto
examples/unified/src/: lib.rs
proto/synapse/: error.proto
proto/synapse/graphql/: context.proto  options.proto
proto/synapse/grpc/: options.proto
proto/synapse/relay/: types.proto
proto/synapse/storage/: options.proto
proto/synapse/validate/: options.proto
protoc-gen-synapse/: Cargo.toml  Justfile  build.rs
protoc-gen-synapse/src/: error.rs  ir.rs  main.rs  options.rs
protoc-gen-synapse/src/backends/: mod.rs  seaorm.rs
protoc-gen-synapse/src/backends/seaorm/: enum_gen.rs  generator.rs  grpc.rs  mod.rs  options.rs  relation.rs  service.rs
protoc-gen-synapse/src/graphql/: connection.rs  dataloader.rs  filter.rs  input.rs  mod.rs  node.rs  object.rs  resolver.rs  schema.rs
protoc-gen-synapse/src/grpc/: errors.rs  mod.rs  service.rs
protoc-gen-synapse/src/storage/: defaults.rs  mod.rs  traits.rs
protoc-gen-synapse/src/storage/seaorm/: column.rs  conversion.rs  entity.rs  enum_gen.rs  generator.rs  implementation.rs  mod.rs  oneof.rs  options.rs  package.rs  relation.rs  types.rs
protoc-gen-synapse/src/validate/: mod.rs
protoc-gen-synapse/tests/fixtures/: graphql_user.proto  graphql_uuid.proto  user.proto  user_service.proto
protoc-gen-synapse/tests/output/: .gitignore
synapse-proto-gen/: Cargo.toml
synapse-proto-gen/src/: generator.rs  main.rs  parser.rs
