[package]
name = "protoc-gen-synapse"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "A protoc plugin for generating type-safe ORM code across multiple backends"
keywords = ["protobuf", "codegen", "orm", "seaorm", "ecto"]
categories = ["development-tools", "database"]

[[bin]]
name = "protoc-gen-synapse"
path = "src/main.rs"

[dependencies]
# Protobuf handling
prost.workspace = true
prost-types.workspace = true
prost-reflect.workspace = true

# Code generation
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true
prettyplease.workspace = true

# Utilities
heck.workspace = true
thiserror.workspace = true
once_cell.workspace = true

[build-dependencies]
prost-build = "0.13"
prost-reflect-build = "0.15"
