[package]
name = "synapse-proto-gen"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Generate auxiliary proto types (filters, connections) from entity definitions"
keywords = ["protobuf", "codegen", "graphql", "relay"]
categories = ["development-tools"]

[[bin]]
name = "synapse-proto-gen"
path = "src/main.rs"

[dependencies]
# Protobuf handling
prost.workspace = true
prost-types.workspace = true
prost-reflect.workspace = true

# Utilities
heck.workspace = true
thiserror.workspace = true

# CLI
clap = { version = "4.5", features = ["derive"] }
