[package]
name = "synapse-gateway-example"
version = "0.1.0"
edition = "2021"

[dependencies]
# The service crates that we're federating
synapse-full-stack-example = { path = "../full-stack" }
synapse-iam-example = { path = "../iam" }

# Async runtime
tokio = { version = "1", features = ["full"] }

# gRPC
tonic = "0.12"
prost = "0.13"

# GraphQL
async-graphql = { version = "7", features = ["dataloader"] }
async-graphql-axum = "7"

# Web framework
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Utilities
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
